Carousel inside Dialog animates correctly and is styled for Desktop screens. NOt responsive and JS logic for 'Add to Cart' is not working yet.

--- a/assets/card-carousel.css
+++ b/assets/card-carousel.css
@@ -2,15 +2,49 @@ dialog.product-slider__modal {
     width: 75%;
     height: 70%;
     border: none;
-    padding: 2.5vh 5vw;
+    padding: 0;
+    opacity: 0;
+    transform: translateY(-25px);
+    transition: all 500ms ease allow-discrete;
 }
 
-.product-slider__modal::backdrop {
+dialog.product-slider__modal:open {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+@starting-style {
+    dialog.product-slider__modal:open {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+}
+
+.product-slider__carousel-dialog-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+dialog.product-slider__modal::backdrop {
+    background-color: rgba(0, 0, 0, 0);
+    transition: all 500ms ease allow-discrete;
+}
+
+dialog.product-slider__modal:open::backdrop {
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+@starting-style {
+    dialog.product-slider__modal:open::backdrop {
+        background-color: rgba(0, 0, 0, 0);
+    }
+}
+
 .product-slider__carousel-dialog {
-    width: 100%;
+    width: 60%;
     height: 100%;
 }
 
@@ -20,12 +54,31 @@ dialog.product-slider__modal {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0;
+    padding: 0;
 }
 
-.product-slider__carousel-dialog-cell img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
+.product-slider__carousel-dialog-content {
+    padding: 0 2vh;
+}
+
+.product-slider__carousel-dialog-content > button:first-child {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.product-slider__carousel-dialog-product-title {
+    font-size: 1.25rem;
+    font-weight: 400;
+}
+
+.product-slider__carousel-dialog-product-price {
+    font-size: 1.25rem;
+    font-weight: 600;
 }
 
 .product-slider__carousel-dialog-product-color {
@@ -34,9 +87,8 @@ dialog.product-slider__modal {
     height: 25px;
     border-radius: 50%;
     border: 0.5px solid black;
-    background-color: var(--product-color)
+    background-color: var(--product-color);
 }
-
 
 .product-slider__carousel-dialog-product-color-container {
     display: flex;
@@ -71,7 +123,7 @@ dialog.product-slider__modal {
 
 .product-slider__carousel-dialog-sizes-list {
     display: flex;
-    column-gap: 2vw;
+    column-gap: 1vw;
     list-style: none;
     padding: 0;
 }
@@ -89,21 +141,53 @@ dialog.product-slider__modal {
     margin: 3vh 0;
     width: 100%;
     height: auto;
+    background-color: rgb(26, 26, 26);
+    transition: all 300ms ease;
+}
+
+.product-slider__carousel-dialog-add-to-cart-container:hover {
+    background-color: rgb(60, 60, 60);
 }
 
 .product-slider__carousel-dialog-add-to-cart-button {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 50px;
     font-size: 0.85rem;
+    color: white !important;
+    text-align: center;
     border: none;
-    background-color: rgb(26, 26, 26);
-    color: rgb(215, 215, 215);
     cursor: pointer;
     transition: all 300ms ease;
 }
 
-.product-slider__carousel-dialog-add-to-cart-button:hover {
-    background-color: rgb(190, 190, 190);
-    color: rgb(26, 26, 26);
+.product-slider__carousel-dialog-product-description-container {
+    width: 100%;
+    height: auto;
+    padding: 1vh 0;
+}
+
+.product-slider__carousel-dialog-product-description-container > p {
+    width: 100%;
+    height: auto;
+    text-wrap: wrap;
+    font-weight: 300;
+}
+
+.product-slider__carousel-dialog-full-details-container {
+    width: 100%;
+    height: auto;
+    padding: 2vh 0;
+    margin-top: 2vh;
+    border-top: 0.1px solid rgba(175, 175, 175, 0.35);
+    border-bottom: 0.1px solid rgba(175, 175, 175, 0.35);
+}
+
+.product-slider__carousel-dialog-full-details-container > a {
+    display: block;
+    width: 100%;
+    text-align: center;
+    color: rgb(130, 130, 130);
 }
